<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".WelcomeActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:elevation="4dp"
            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:title="@string/user"
            app:titleTextColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:gravity="center">
                <TextView
                    android:id="@+id/txtprovider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black"
                    android:text="@string/text_welcome"/>
                <TextView
                    android:id="@+id/txtemail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/black"
                    android:text="@string/user"/>

                <Button
                    android:id="@+id/btnLogOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/singout"
                    android:backgroundTint="#FF0000"/>

            </LinearLayout>

            <ImageView
                android:layout_width="66dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/pets" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="205dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="#FF0000"
                    android:textStyle="italic"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="6sp"
                    android:autoSizeTextType="uniform"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="6sp"
                    android:autoSizeTextType="uniform"
                    android:justificationMode="inter_word"
                    android:text="@string/text_introduction"
                    android:textAlignment="center" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="2dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="115dp"
                android:layout_marginRight="3dp"
                android:layout_weight="1"
                android:src="@drawable/pets"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/properties"
                    android:textStyle="italic"
                    android:textColor="#FF0000"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="6sp"
                    android:autoSizeTextType="uniform"
                    android:justificationMode="inter_word"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:autoSizeMaxTextSize="18sp"
                    android:autoSizeMinTextSize="6sp"
                    android:autoSizeTextType="uniform"
                    android:justificationMode="inter_word"
                    android:text="@string/text_properties" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@android:drawable/ic_input_add"
        app:tint="@color/white"
        android:backgroundTint="#FF0000"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>